tests/rosetta/out/Fortran/call-a-function-1.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program call_a_function_1
  implicit none
  contains
  recursive integer function f() result(res)
    res = (/0,0/)
    return
  end function f
  recursive integer function g(a,b) result(res)
    integer, intent(in) :: a
    real, intent(in) :: b
    res = 0
    return
  end function g
  recursive integer function h(s,nums) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: nums
  end function h
end program call_a_function_1
